apps/pihole/pihole-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    # ingress.kubernetes.io/auth-type: basic
    # ingress.kubernetes.io/auth-secret: mysecret
spec:
  rules:
  - host: pihole.local
    http:
      paths:
      - backend:
          serviceName: pihole
          servicePort: 8000
        path: /admin
